# cfb-database

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy-manifest.json  pyproject.toml
.circleci/: config.yml
.claude/: settings.json
.dlt/: config.toml  secrets.toml.example
.githooks/: pre-push
deploys/: coach-records-manifest.json  p32-backfill-manifests.md  p32-probe-manifest.json  p33-apply-manifest.json
docs/: CFB_APP_ANALYTICS_CAPABILITIES.md  SCHEMA_CONTRACT.md  SPRINT_PLAN.md  SUPABASE_BEST_PRACTICES_AUDIT.md  api-field-audit.md  cfbd-api-endpoints.md  db-snapshot-2026-01-27.json  db-snapshot-current.json  dlt-reference.md  pipeline-manifest.md  write-dispositions.md
mcp/: .env.example  README.md  pyproject.toml
mcp/src/cfb_mcp/: __init__.py  __main__.py  postgrest.py  server.py
mcp/tests/: conftest.py  test_get_data_freshness.py  test_get_leaderboard.py  test_get_rankings.py  test_postgrest.py  test_query_games.py  test_query_matchup.py  test_query_team.py  test_search_players.py  test_situational_splits.py
scripts/: backfill_ingame_wp.py  build_features.py  calibrate_live_wp.py  check_backtest.py  check_presence.py  compute_adjusted_epa.py  compute_adjusted_epa_week.py  compute_house_elo.py  compute_predictions.py  deploy_schema.py  generate_recaps.py  load_flat_files.py  load_new_endpoints.py  load_play_stat_types.py  load_season.py  poll_scoreboard.py  probe_metrics_wp.py  refresh_marts.py  refresh_marts.sql  run_marts.py  run_migrations.py  score_fitted.py  seed_team_xwalk.py  train_model.py  tune_params.py  verify_load.py
(+306 files in other folders)
