[project]
name = "cfb-database"
version = "0.1.0"
description = "College Football Data warehouse using dlt and Supabase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
cfb-pipeline = "src.pipelines.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
